# smithy-examples

./: .gitignore  Makefile  README.md  gradle.properties  settings.gradle.kts  smithy-templates.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: git-secrets.yml  integ.yml  update-smithy-version.yml  (+1 more)
conversion/: Makefile  README.md
conversion-examples/: README.md
custom-trait-examples/: README.md
custom-traits/: README.md  gradle.properties  settings.gradle.kts
decorators/: .gitignore  README.md  gradle.properties  settings.gradle.kts
getting-started-example/: Makefile  README.md
getting-started-example-gradle/: Makefile  README.md
getting-started-examples/: Makefile  README.md
linting-and-validation/: README.md  settings.gradle.kts
linting-and-validation-examples/: README.md
projection-examples/: Makefile  README.md
projections/: README.md
quickstart-examples/: Makefile  README.md
shared-model-examples/: README.md
shared-models/: settings.gradle.kts
smithy-docgen-examples/: README.md
smithy-java-examples/: README.md
smithy-kotlin-examples/: README.MD
smithy-rs-examples/: README.md
smithy-rs-examples/quickstart-rust/client/: Cargo.toml  build.gradle.kts  smithy-build.json
smithy-rs-examples/quickstart-rust/client/src/: main.rs
smithy-rs-examples/quickstart-rust/server/: Cargo.toml  build.gradle.kts  smithy-build.json
smithy-rs-examples/quickstart-rust/server/src/: lib.rs  main.rs
smithy-tutorial/: Makefile  README.md
smithy-typescript-examples/: README.md
tutorial/: Makefile  README.md  test
(+341 files in other folders)
