[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# generated client SDK
coffeeshop_client_sdk = { path = "./build/smithyprojections/client/source/rust-client-codegen", features = ["behavior-version-latest"]}
