[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

# generated server SDK
coffeeshop_server_sdk = { path = "./build/smithyprojections/server/source/rust-server-codegen" }
